src/objects/ChinaModel_Device_Reporting_Object__c.object
<CustomObject>
    <description>Reporting Object, from Access</description>
    <fields>
        <fullName>APC__c</fullName>
        <label>APC</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ChinaModel_Device_Reporting_Objects</relationshipLabel>
        <relationshipName>ChinaModel_Device_Reporting_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>ChinaModel_Device_Reporting_Objects</relationshipLabel>
        <relationshipName>ChinaModel_Device_Reporting_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>China_Models__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>China Models</label>
        <referenceTo>China_Models__c</referenceTo>
        <relationshipLabel>ChinaModel_Device_Reporting_Objects</relationshipLabel>
        <relationshipName>ChinaModel_Device_Reporting_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Device</label>
        <referenceTo>Device__c</referenceTo>
        <relationshipLabel>ChinaModel_Device_Reporting_Objects</relationshipLabel>
        <relationshipName>ChinaModel_Device_Reporting_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Name__c</fullName>
        <label>External Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Refresh__c</fullName>
        <label>Last Refresh</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Royalty_Description__c</fullName>
        <label>Royalty Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SA_Date__c</fullName>
        <label>SA Date</label>
        <type>Date</type>
    </fields>
    <label>ChinaModel_Device_Reporting_Object</label>
    <nameField>
        <label>ChinaModel_Device_Reporting_Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ChinaModel_Device_Reporting_Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>